changed derivative function using math. and styles

--- a/funkcie/index.html
+++ b/funkcie/index.html
@@ -124,7 +124,7 @@
 
                 </div>
                 <div
-                    style="margin-bottom: 4rem; background-color: rgb(243, 243, 243); padding: 2rem; border-radius: 6px;">
+                    style="margin-bottom: 4rem; background-color: rgb(247, 247, 247); padding: 2rem; border-radius: 8px;">
                     <h5>Kvadratická funkcia</h5>
                     <br>
                     <p>je funkcia definovaná v $${\bf R}$$ rovnicou
@@ -160,7 +160,8 @@
                     <img src="/images/grafyMocn.png" alt="grafy mocninovej funkcie" class="graph">
                 </div>
 
-                <div style="margin-bottom: 4rem;">
+                <div
+                    style="margin-bottom: 4rem; background-color: rgb(247, 247, 247); padding: 2rem; border-radius: 8px;">
                     <h5>Logaritmická funkcia</h5>
                     <br>
                     <p>Pretože exponenciálna funkcia je monotónna, má inverznú funkciu. Táto sa volá logaritmická
