fixed graph button fighting bootstrap = custom css

--- a/funkcie/index.html
+++ b/funkcie/index.html
@@ -248,7 +248,7 @@
 
                 <input id="function" type="text" value="sin(x)" onchange="plot();">
                 <p></p>
-                <button type="button" onclick="plot();" class="btn btn-outline-primary">Zobraziť graf</button>
+                <button type="button" onclick="plot();" id="graphBtn">Zobraziť graf</button>
 
             </section>
 
