--- a/funkcie/index.html
+++ b/funkcie/index.html
@@ -60,7 +60,7 @@
                             <a class="nav-link" href="#scrollspyHeading2">Elementárne funkcie</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#scrollspyHeading3">********</a>
+                            <a class="nav-link" href="#scrollspyHeading3">Derivácia funkcie</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#scrollspyHeading4">Graf funkcie</a>
@@ -214,6 +214,20 @@
 
 
             </div>
+
+            <div id="scrollspyHeading3" style="padding-top: 4rem;" class="box">
+                <h3 class="title">Derivácia funkcie</h3>
+                <hr>
+                <br><br>
+                <label for="functionInput">Zadaj funkciu:</label>
+                <input type="text" id="functionInput" name="functionInput">
+                <button type="button" id="derivateBtn">Derivuj</button>
+                <p id="resultDerivate"></p>
+
+
+
+            </div>
+
             <div class="box" id="scrollspyHeading4" style="padding-top: 4rem;">
                 <h3 class="title">Graf funkcie</h3>
                 <hr>
@@ -224,6 +238,7 @@
                     sa nazýva graf funkcie $$f(x)$$. </p>
             </div>
         </div>
+
         <div class="layer">
             <section id="plotSettings">
                 <label for="xMin">xMin: </label> <input type=number id="xMin" value=-5 step=0.5 oninput="plot();">
