added working derivative calculator

--- a/funkcie/index.html
+++ b/funkcie/index.html
@@ -221,8 +221,12 @@
                 <br><br>
                 <label for="functionInput">Zadaj funkciu:</label>
                 <input type="text" id="functionInput" name="functionInput">
-                <button type="button" id="derivateBtn">Derivuj</button>
-                <p id="resultDerivate"></p>
+                <div style="margin: 1.5rem auto;">
+                    <button type="button" id="derivateBtn">Derivuj</button>
+                    <button type="button" id="clrBtn">Vymaž</button>
+                </div>
+
+                <p style="margin: 2rem auto;" id="resultDerivate">Derivácia =</p>
 
 
 
