added a lot of content images/ plots/ lpage

--- a/funkcie/index.html
+++ b/funkcie/index.html
@@ -22,6 +22,7 @@
     <script src="normal.js"></script>
     <script src="graf.js" defer></script>
     <link rel="stylesheet" href="styleGraf.css">
+    <link rel="stylesheet" href="../styleAll.css">
     <title>Funkcie</title>
 </head>
 
@@ -103,8 +104,11 @@
                     <p>je funkcia definovaná v $${\bf R}$$ rovnicou $$y = c $$ , Jej graf je priamka rovnobežná s osou
                         $$x$$.</p>
                     <br>
-                    <img src="/images/constantPlot.gif" alt="graf konštantnej funkcie" class="graph">
+                    <img src="/images/konstantna.png" alt="graf konštantnej funkcie" class="graph">
+                    <p>$$y= 1$$</p>
+
                 </div>
+                <hr class="lineSplit">
                 <div style="margin-bottom: 4rem;">
                     <h5>Lineárna funkcia</h5>
                     <br>
@@ -118,13 +122,14 @@
                         </ul>
                         <p>a pretína os $$y$$ v bode $$[0,q]$$.</p>
                         <br>
-                        <img src="/images/linearna_funkcia.png" alt="graf lineárnej funkcie" class="graph">
+                        <img src="/images/linearna.png" alt="graf lineárnej funkcie" class="graph">
+                        <p>$$y= x+1$$</p>
 
                     </div>
 
                 </div>
-                <div
-                    style="margin-bottom: 4rem; background-color: rgb(247, 247, 247); padding: 2rem; border-radius: 8px;">
+                <hr class="lineSplit">
+                <div style="margin-bottom: 4rem;">
                     <h5>Kvadratická funkcia</h5>
                     <br>
                     <p>je funkcia definovaná v $${\bf R}$$ rovnicou
@@ -133,8 +138,10 @@
                         $$a
                         <0$$. Jej vrchol je v bode $$[-\frac{b}{2a},\frac{4ac-b^2}{4a}]$$.</p>
                             <br>
-                            <img src="/images/kvadraticka_funkcie.png" alt="graf kvadratickej funkcie" class="graph">
+                            <img src="/images/kvadra2.png" alt="graf kvadratickej funkcie" class="graph">
+                            <p>$$y= x^2 - 2x$$</p>
                 </div>
+                <hr class="lineSplit">
                 <div style="margin-bottom: 4rem;">
                     <h5>Mocninová funkcia</h5>
                     <br>
@@ -157,11 +164,11 @@
                             $$D(f)=\langle
                             0,\infty)$$ pre párne $$n$$, $$D(f)={\bf R}$$ pre nepárne $$n$$.</li>
                     </ul>
-                    <img src="/images/grafyMocn.png" alt="grafy mocninovej funkcie" class="graph">
+                    <img src="/images/mocninova.png" alt="grafy mocninovej funkcie" class="graph">
+                    <p>$$y= x^3$$</p>
                 </div>
-
-                <div
-                    style="margin-bottom: 4rem; background-color: rgb(247, 247, 247); padding: 2rem; border-radius: 8px;">
+                <hr class="lineSplit">
+                <div style="margin-bottom: 4rem; ">
                     <h5>Logaritmická funkcia</h5>
                     <br>
                     <p>Pretože exponenciálna funkcia je monotónna, má inverznú funkciu. Táto sa volá logaritmická
@@ -178,9 +185,10 @@
                         Medzi logaritmickými funkciami má dôležité postavenie funkcia $$\ln x = \log_e x$$, ktorá je
                         inverzná k funkcii $$y=e^x$$, volá sa prirodzený logaritmus.</p>
 
-                    <img src="/images/logFn.gif" alt="graf logaritmickej funkcie" class="graph">
+                    <img src="/images/logaritmicka.png" alt="graf logaritmickej funkcie" class="graph">
+                    <p>$$y=\log x$$</p>
                 </div>
-
+                <hr class="lineSplit">
                 <div style="margin-bottom: 4rem;">
                     <h5>Goniometrické funkcie</h5>
                     <br>
@@ -197,18 +205,23 @@
                         Funkcia
                         sínus je nepárna, funkcia kosínus je párna.</p>
 
-                    <img src="/images/graf_sin_gg.png" alt="graf funkcie sin(x)" class="graph">
-                    <p>graf $$y=\sin x$$</p>
+                    <img src="/images/sinus.png" alt="graf funkcie sin(x)" class="graph">
+                    <p>$$y=\sin x$$</p>
                     <br>
-                    <img src="/images/graf_cos_gg.png" alt="graf funkcie cos(x)" class="graph">
-                    <p>graf $$y=\cos x $$</p>
+                    <img src="/images/cosinus.png" alt="graf funkcie cos(x)" class="graph">
+                    <p>$$y=\cos x $$</p>
 
                     <p>Funkcie <span style="color:blue">tangens a kotangens</span> sú nepárne, periodické funkcie s
                         periódou $$\pi$$. Pre ich definičné
                         obory platí $$D(\mbox{tg}\,)={\bf R}-\{(2n+1)\frac{\pi}{2}\}$$, $$n \in {\bf Z}$$ a
                         $$D(\mbox{cotg}\,)={\bf R}-\{n\pi\}$$, $$n \in {\bf Z}$$.</p>
                     <br>
-                    <img src="/images/tanC.png" alt="graf funkcie tan(x) a cotg(x)" class="graph">
+                    <img src="/images/tangens.png" alt="graf funkcie tan(x) a cotg(x)" class="graph">
+                    <p>$$y=\tan x$$</p>
+                    <br>
+                    <img src="/images/cotangens.png" alt="graf funkcie tan(x) a cotg(x)" class="graph">
+                    <p>$$y=\cot x$$</p>
+                    <br>
                 </div>
 
 
