--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -21,9 +21,9 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
-
   <link rel="stylesheet" href="../styles.css" />
   <link rel="stylesheet" href="mainStyle.css" />
+
   <title>Matematika 1</title>
   <link rel="icon" type="image/png" href="../images/logo.png" />
 </head>
@@ -47,9 +47,6 @@
             </li>
             <li class="nav-item mx-auto">
               <a class="nav-link" aria-current="page" href="../linearnaAlgebra/index.html">Lineárna algebra</a>
-            </li>
-            <li class="nav-item mx-auto">
-              <a class="nav-link" aria-current="page" href="../graf_vsetko/index.html">Graf</a>
             </li>
             <li class="nav-item nav-night mx-auto">
               <div class=" nav-link" id="nightMode">
@@ -110,43 +107,50 @@
 
       <h3 class="nadpis" style="text-align: center">Kalkulačky:</h3>
       <div id="card-holder">
-        <div class="card" style="width: 10rem">
-          <img class="card-img-top" src="..." alt="Card image cap" />
+        <div class="card" style="width: 13rem; height: 17rem;">
+          <img class="card-img-top" src="../images/nsobMat.png" alt="Card image cap" />
           <div class="card-body">
             <p class="card-text">
-              Some quick example text to build on the card title and make up
-              the bulk of the card's content.
+              Násobenie matic.
             </p>
           </div>
         </div>
-        <div class="card" style="width: 10rem">
-          <img class="card-img-top" src="..." alt="Card image cap" />
+        <div class="card" style="width: 13rem; height: 17rem;">
+          <img class="card-img-top" src="../images/inveMat.png" alt="Card image cap" />
           <div class="card-body">
             <p class="card-text">
-              Some quick example text to build on the card title and make up
-              the bulk of the card's content.
+              Inverzná matica.
             </p>
           </div>
         </div>
-        <div class="card" style="width: 10rem">
-          <img class="card-img-top" src="..." alt="Card image cap" />
+        <div class="card" style="width: 13rem; height: 17rem;">
+          <img class="card-img-top" src="../images/deterRozvoj.png" alt="Card image cap" />
           <div class="card-body">
             <p class="card-text">
-              Some quick example text to build on the card title and make up
-              the bulk of the card's content.
+              Determinant.
             </p>
           </div>
         </div>
-        <div class="card" style="width: 10rem">
-          <img class="card-img-top" src="..." alt="Card image cap" />
+        <div class="card" style="width: 13rem; height: 17rem;">
+          <img class="card-img-top" src="../images/derivFn.png" alt="Card image cap" />
           <div class="card-body">
             <p class="card-text">
-              Some quick example text to build on the card title and make up
-              the bulk of the card's content.
+              Derivácia funkcie.
             </p>
           </div>
         </div>
       </div>
+      <p style="text-align: center;">a dalšie ...</p>
+
+      <br>
+
+      <section style="text-align: center;">
+        <p>Taktiež tu nájdete vyzualizačný nástroj na vykreslovanie grafu funkcie, dotyčnice v danom bode a zobrazenie
+          rovnice normály funkcie.</p>
+        <img src="../images/garfFn.png" alt="vizualizačný nástroj na vykreslovanie grafu funkcie"
+          style="max-width: 100%; height: auto;">
+      </section>
+      <br>
       <hr id="line" />
       <img src="../images/info.svg" alt="info" style="float: left" />
       <p id="intro">
