--- a/linearnaAlgebra/index.html
+++ b/linearnaAlgebra/index.html
@@ -19,6 +19,7 @@
    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
    <link rel="icon" type="image/png" href="../images/fav.png">
+   <link rel="stylesheet" href="../styleAll.css">
    <title>Lineárna algebra</title>
 </head>
 
@@ -98,7 +99,14 @@
          </div>
       </div>
       <hr>
-      <div class="latitle">Sústavy lineárnych rovníc</div>
+      <div style="margin: 5rem auto;">
+         <div class="latitle">Sústavy lineárnych rovníc</div>
+         <div class="cards">
+            <a class="nav-link1" href="témy/sustavyLinearnychRovnic/index.html">
+               <div class="card">TEÓRIA - GAUSSOVA ELIMINAČNÁ METÓDA - KALKULAČKA SÚSTAVY ROVNÍC</div>
+            </a>
+         </div>
+      </div>
    </main>
    <footer class="text-center text-lg-start" style="background-color: lightgray; height: 4rem;">
       <!-- Copyright -->
