--- a/linearnaAlgebra/témy/sustavyLinearnychRovnic/index.html
+++ b/linearnaAlgebra/témy/sustavyLinearnychRovnic/index.html
@@ -85,7 +85,7 @@
                 <div class="tab-pane fade show active " id="theory" role="tabpanel" aria-labelledby="theory-tab"
                     style="text-align: left;">
                     <p>Sústavu rovníc:</p>
-                    <p class="text-center">$$\begin{aligned}
+                    <p class="mathjax_martix">$$\begin{aligned}
                         a_{11}x_1 + \dots + a_{1n}x_n &= b_1 \\
                         a_{21}x_1 + \dots + a_{2n}x_n &= b_2 \\
                         &\vdots \\
@@ -100,7 +100,7 @@
                         . ,
                         b_{m}$$ sú absolútne členy (pravá strana). Maticu (tabuľku), utvorenú z koeficientov :</p>
                     <br>
-                    <div class="text-center mt-3">$$A = \begin{pmatrix}
+                    <div class="mathjax_matrix">$$A = \begin{pmatrix}
                         a_{11} & a_{12} & \cdots & a_{1n} \\
                         a_{21} & a_{22} & \cdots & a_{2n} \\
                         \vdots & \vdots & \ddots & \vdots \\
@@ -112,7 +112,7 @@
                         pravej strany, dostaneme
                         maticu</p>
                     <br>
-                    <div class="text-center table-responsive overflow-y-hidden">$$
+                    <div class="mathjax_matrix">$$
                         A_0 = \begin{pmatrix}
                         a_{11} & a_{12} & \cdots & a_{1n} & b_1 \\
                         a_{21} & a_{22} & \cdots & a_{2n} & b_2 \\
@@ -129,7 +129,7 @@
                 <div class="tab-pane fade" id="sample-problems" role="tabpanel" aria-labelledby="sample-problems-tab"
                     style="text-align: left">
                     <p>Gaussovou eliminačnou metódou riešte sústavu:</p>
-                    <div class="text-center table-responsive overflow-y-hidden mathjax_matrix">$$
+                    <div class="mathjax_matrix">$$
                         \begin{array}{rrrrrrrr}
                         2x_1 & + &4x_2 & - &2x_3 & = & 6 & \\
                         x_1 & - &x_2& + & 5x_3 & = & 0 & \\
@@ -141,7 +141,7 @@
                         Pomocou ekvivalentných úprav chceme dospieť ku sústave Cx = d , pričom matica C bude mať
                         štruktúru:</p>
                     <br>
-                    <div class="text-center mathjax_matrix">$$
+                    <div class="mathjax_matrix">$$
                         \left(
                         \begin{array}{rrr}
                         \clubsuit & \clubsuit & \clubsuit \\
@@ -153,7 +153,7 @@
                     </div>
                     <p>a na diagonále nenulové prvky. Vynásobme prvú rovnicu sústavy číslom $$(-1/2)$$ a pripočítajme ju
                         ku druhej rovnici. Dostaneme sústavu</p>
-                    <div class="text-center mathjax_matrix">$$
+                    <div class="mathjax_matrix">$$
                         \begin{array}{rrrrrrrr}
                         2x_1 & + &4x_2 & - &2x_3 & = & 6 & \\
                         & - &3x_2& + & 6x_3 & = & -3 & \\
@@ -165,7 +165,7 @@
                         $$(1,1)$$, sú nulové.
                         Vynásobením druhej rovnice číslom $$7/(-3)$$ a pripočítaním ku tretej rovnici dostaneme
                     </p>
-                    <div class="text-center mathjax_matrix">$$
+                    <div class="mathjax_matrix">$$
                         \begin{array}{rrrrrrrr}
                         2x_1 & + &4x_2 & - &2x_3 & = & 6 & \\
                         & - &3x_2& + & 6x_3 & = & -3 & \\
@@ -179,33 +179,32 @@
                     <h5>Vypočítaj sústavy rovníc</h5>
                     <hr>
                     <br>
-                    <div
-                        style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); grid-gap: 2rem; justify-items: center; align-items: center;">
+                    <div class="grid_examples">
                         <div>$$ \begin{array}{rrrrrrrr}
                             2x_1 & + &4x_2 & = & 6 & \\
                             x_1 & - &x_2& = & 0 & \\
                             \end{array}
                             $$</div>
-                        <div>$$ \begin{array}{rrrrrrrr}
+                        <div class="mathjax_matrix">$$ \begin{array}{rrrrrrrr}
                             3x_1 & + &4x_2 & = & 2 & \\
                             2x_1 & + &2x_2& = & 1 & \\
                             \end{array}
                             $$</div>
-                        <div>
+                        <div class="mathjax_matrix">
                             \begin{array}{rrrrrrrr}
                             -x_1 & + &3x_2 & & & = & -72 & \\
                             3x_1 & + &4x_2& - & 4x_3 & = & -4 & \\
                             -20x_1 &- &12x_2 & + &5x_3 & = & -50 & \\
                             \end{array}
                         </div>
-                        <div>
+                        <div class=" mathjax_matrix">
                             \begin{array}{rrrrrrrr}
                             x_1 & + &2x_2& + & 3x_3 &= & 14 & \\
                             3x_1 & + &2x_2& + & x_3 & = & 10 & \\
                             3x_1 &+ &x_2 & + &2x_3 & = & 11 & \\
                             \end{array}
                         </div>
-                        <div>
+                        <div class="mathjax_matrix">
                             \begin{array}{rrrrrrrr}
                             x_1 & + &2x_2& + & 3x_3 & + & 4x_3 &= & 0 & \\
                             7x_1 & + &14x_2& + & 20x_3 & + & 27x_3 & = & 0 & \\
@@ -213,7 +212,7 @@
                             3x_1 &+ &5x_2 & + &6x_3 & + & 13x_3 & = & 5 & \\
                             \end{array}
                         </div>
-                        <div>
+                        <div class="mathjax_matrix">
                             \begin{array}{rrrrrrrr}
                             2x_1 & + &x_2& - & x_3 & + & x_3 &= & 1 & \\
                             3x_1 & - &2x_2& + & 2x_3 & - & 3x_3 & = & 2 & \\
