--- a/linearnaAlgebra/témy/sustavyLinearnychRovnic/index.html
+++ b/linearnaAlgebra/témy/sustavyLinearnychRovnic/index.html
@@ -85,12 +85,12 @@
                 <div class="tab-pane fade show active " id="theory" role="tabpanel" aria-labelledby="theory-tab"
                     style="text-align: left;">
                     <p>Sústavu rovníc:</p>
-                    <p class="mathjax_martix">$$\begin{aligned}
+                    <div class="mathjax_matrix">$$\begin{aligned}
                         a_{11}x_1 + \dots + a_{1n}x_n &= b_1 \\
                         a_{21}x_1 + \dots + a_{2n}x_n &= b_2 \\
                         &\vdots \\
                         a_{m1}x_1 + \dots + a_{mn}x_n &= b_m.
-                        \end{aligned}$$</p>
+                        \end{aligned}$$</div>
                     <br><br>
                     <p>nazývame<span class="text-primary"> sústava $$m$$ lineárnych algebraických rovníc o $$n$$
                             neznámych</span> (SLAR). Čísla
