fixed some minor mistakes

--- a/funkcie/index.html
+++ b/funkcie/index.html
@@ -146,8 +146,8 @@
                     <h5>Mocninová funkcia</h5>
                     <br>
                     <p>je funkcia definovaná rovnicou $$
-                        f(x)=x^a,$$ $$ kde $$a$$ je reálne číslo.
-                        $$</p>
+                        f(x)=x^a,$$ kde $$a$$ je reálne číslo.
+                    </p>
                     <p>Jej vlastnosti a graf závisia od exponentu $$a$$, napr.:</p>
                     <ul class="list1">
                         <li>Ak $$a$$ je párne prirodzené číslo, tak $$D(f)={\bf R}$$, funkcia je párna, klesajúca v
@@ -174,7 +174,7 @@
                     <p>Pretože exponenciálna funkcia je monotónna, má inverznú funkciu. Táto sa volá logaritmická
                         funkcia a označuje sa</p>
                     <p>$$
-                        y = \log_a x$$ kde $$a > 0$$ a $$\neq 1$$ je
+                        y = \log_a x$$ kde $$a > 0$$, $$a \neq 1$$ je
                         reálna konštanta
                     </p>
                     <p>nazývaná základ logaritmickej funkcie. Logaritmická funkcia so základom $$10$$ sa zapisuje $$\log
