fixed some mistakes

--- a/funkcie/index.html
+++ b/funkcie/index.html
@@ -87,8 +87,8 @@
                 <br>
                 <p style="text-align: center;">$$f : M \rightarrow R, x \rightarrow = f (x)$$</p>
                 <br>
-                <p>Číslo $$x \in M$$ je nezávisle premenná - argument funkcie,
-                    číslo $$y \in M$$ je závisle premenná - hodnota funkcie.
+                <p>Číslo $$x \in M$$ je nezávislá premenná - argument funkcie,
+                    číslo $$y \in M$$ je závislá premenná - hodnota funkcie.
                     Množina $$M = D(f)$$ sa nazýva oblasť definičný obor funkcie,
                     funkcia je definovaná na množine $$M$$.
                     Množina všetkých hodnôt funkcie je obor hodnôt $$H(f)$$.
@@ -136,7 +136,7 @@
                         $$y=ax^2+bx+c,\ \ \ a \neq 0.$$</p>
                     <p>Jej graf je parabola s osou rovnobežnou s osou $$y$$. Je otvorená nahor, ak $$a>0$$ a nadol, ak
                         $$a
-                        <0$$. Jej vrchol je v bode $$[-\frac{b}{2a},\frac{4ac-b^2}{4a}]$$.</p>
+                        <0$$. Jej vrchol je v bode $$\left[-\frac{b}{2a},\frac{4ac-b^2}{4a}\right]$$.</p>
                             <br>
                             <img src="/images/kvadra2.png" alt="graf kvadratickej funkcie" class="graph">
                             <p>$$y= x^2 - 2x$$</p>
@@ -213,7 +213,7 @@
 
                     <p>Funkcie <span style="color:blue">tangens a kotangens</span> sú nepárne, periodické funkcie s
                         periódou $$\pi$$. Pre ich definičné
-                        obory platí $$D(\mbox{tg}\,)={\bf R}-\{(2n+1)\frac{\pi}{2}\}$$, $$n \in {\bf Z}$$ a
+                        obory platí $$D(\mbox{tg}\,)={\bf R}-\left\{(2n+1)\frac{\pi}{2}\right\}$$, $$n \in {\bf Z}$$ a
                         $$D(\mbox{cotg}\,)={\bf R}-\{n\pi\}$$, $$n \in {\bf Z}$$.</p>
                     <br>
                     <img src="/images/tangens.png" alt="graf funkcie tan(x) a cotg(x)" class="graph">
