--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -43,10 +43,10 @@
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item mx-auto">
-              <a class="nav-link" aria-current="page" href="../funkcie/index.html">Funkcie</a>
+              <a class="nav-link" aria-current="page" href="../linearnaAlgebra/index.html">Lineárna algebra</a>
             </li>
             <li class="nav-item mx-auto">
-              <a class="nav-link" aria-current="page" href="../linearnaAlgebra/index.html">Lineárna algebra</a>
+              <a class="nav-link" aria-current="page" href="../funkcie/index.html">Funkcie 1 reálnej premennej</a>
             </li>
             <li class="nav-item nav-night mx-auto">
               <div class=" nav-link" id="nightMode">
@@ -57,7 +57,6 @@
                 </div>
               </div>
             </li>
-
           </ul>
         </div>
       </div>
