--- a/linearnaAlgebra/témy/gaussovTvarMatice/index.html
+++ b/linearnaAlgebra/témy/gaussovTvarMatice/index.html
@@ -86,7 +86,7 @@
                 vedúcou jednotkou je rovný 0.</li>
             </ul>
           </div>
-          Dá sa pomerne l'ahko ukázat', že
+          Dá sa pomerne ľahko ukázat', že
           každá matica je ekvivalentná s nejakou maticou v Gaussovom
           tvare. Inak povedané, pre každú maticu existuje postupnost'
           riadkových operácií, pomocou ktorej je možné danú maticu
