changes graph images

--- a/funkcie/index.html
+++ b/funkcie/index.html
@@ -104,7 +104,7 @@
                     <p>je funkcia definovaná v $${\bf R}$$ rovnicou $$y = c $$ , Jej graf je priamka rovnobežná s osou
                         $$x$$.</p>
                     <br>
-                    <img src="/images/konstantna.png" alt="graf konštantnej funkcie" class="graph">
+                    <img src="/images/1graf.png" alt="graf konštantnej funkcie" class="graph">
                     <p>$$y= 1$$</p>
 
                 </div>
@@ -122,7 +122,7 @@
                         </ul>
                         <p>a pretína os $$y$$ v bode $$[0,q]$$.</p>
                         <br>
-                        <img src="/images/linearna.png" alt="graf lineárnej funkcie" class="graph">
+                        <img src="/images/2graf.png" alt="graf lineárnej funkcie" class="graph">
                         <p>$$y= x+1$$</p>
 
                     </div>
@@ -138,7 +138,7 @@
                         $$a
                         <0$$. Jej vrchol je v bode $$\left[-\frac{b}{2a},\frac{4ac-b^2}{4a}\right]$$.</p>
                             <br>
-                            <img src="/images/kvadra2.png" alt="graf kvadratickej funkcie" class="graph">
+                            <img src="/images/3graf.png" alt="graf kvadratickej funkcie" class="graph">
                             <p>$$y= x^2 - 2x$$</p>
                 </div>
                 <hr class="lineSplit">
@@ -164,7 +164,7 @@
                             $$D(f)=\langle
                             0,\infty)$$ pre párne $$n$$, $$D(f)={\bf R}$$ pre nepárne $$n$$.</li>
                     </ul>
-                    <img src="/images/mocninova.png" alt="grafy mocninovej funkcie" class="graph">
+                    <img src="/images/4graf.png" alt="grafy mocninovej funkcie" class="graph">
                     <p>$$y= x^3$$</p>
                 </div>
                 <hr class="lineSplit">
@@ -185,8 +185,8 @@
                         Medzi logaritmickými funkciami má dôležité postavenie funkcia $$\ln x = \log_e x$$, ktorá je
                         inverzná k funkcii $$y=e^x$$, volá sa prirodzený logaritmus.</p>
 
-                    <img src="/images/logaritmicka.png" alt="graf logaritmickej funkcie" class="graph">
-                    <p>$$y=\log x$$</p>
+                    <img src="/images/5graf.png" alt="graf logaritmickej funkcie" class="graph">
+                    <p>$$y=\ln x$$</p>
                 </div>
                 <hr class="lineSplit">
                 <div style="margin-bottom: 4rem;">
