added periodic plots to gonimetr fn's

--- a/funkcie/index.html
+++ b/funkcie/index.html
@@ -205,10 +205,10 @@
                         Funkcia
                         sínus je nepárna, funkcia kosínus je párna.</p>
 
-                    <img src="/images/sinus.png" alt="graf funkcie sin(x)" class="graph">
+                    <img src="/images/sinPerioda.png" alt="graf funkcie sin(x)" class="graph">
                     <p>$$y=\sin x$$</p>
                     <br>
-                    <img src="/images/cosinus.png" alt="graf funkcie cos(x)" class="graph">
+                    <img src="/images/cosPerioda.png" alt="graf funkcie cos(x)" class="graph">
                     <p>$$y=\cos x $$</p>
 
                     <p>Funkcie <span style="color:blue">tangens a kotangens</span> sú nepárne, periodické funkcie s
@@ -216,10 +216,10 @@
                         obory platí $$D(\mbox{tg}\,)={\bf R}-\left\{(2n+1)\frac{\pi}{2}\right\}$$, $$n \in {\bf Z}$$ a
                         $$D(\mbox{cotg}\,)={\bf R}-\{n\pi\}$$, $$n \in {\bf Z}$$.</p>
                     <br>
-                    <img src="/images/tangens.png" alt="graf funkcie tan(x) a cotg(x)" class="graph">
+                    <img src="/images/tanPerioda.png" alt="graf funkcie tan(x) a cotg(x)" class="graph">
                     <p>$$y=\tan x$$</p>
                     <br>
-                    <img src="/images/cotangens.png" alt="graf funkcie tan(x) a cotg(x)" class="graph">
+                    <img src="/images/cotgPerioda.png" alt="graf funkcie tan(x) a cotg(x)" class="graph">
                     <p>$$y=\cot x$$</p>
                     <br>
                 </div>
