added better styles to landing page + links

--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -103,41 +103,49 @@
           </div>
         </div>
       </div>
-
-      <h3 class="nadpis" style="text-align: center">Kalkulačky:</h3>
+      <br>
+      <h3 class="nadpis" style="text-align: center;">Kalkulačky:</h3>
       <div id="card-holder">
-        <div class="card" style="width: 13rem; height: 17rem;">
-          <img class="card-img-top" src="../images/nsobMat.png" alt="Card image cap" />
-          <div class="card-body">
-            <p class="card-text">
-              Násobenie matic.
-            </p>
+        <a href="/linearnaAlgebra/témy/algebrOperacieMatice/index.html?tab=practice-problems">
+          <div class="card" style="width: 13rem; height: 17rem;">
+            <img class="card-img-top" src="../images/nsobMat.png" alt="Card image cap" />
+            <div class="card-body">
+              <p class="card-text">
+                Násobenie matíc.
+              </p>
+            </div>
           </div>
-        </div>
-        <div class="card" style="width: 13rem; height: 17rem;">
-          <img class="card-img-top" src="../images/inveMat.png" alt="Card image cap" />
-          <div class="card-body">
-            <p class="card-text">
-              Inverzná matica.
-            </p>
+        </a>
+        <a href="/linearnaAlgebra/témy/invMaticaVypocet/index.html?tab=practice-problems">
+          <div class="card" style="width: 13rem; height: 17rem;">
+            <img class="card-img-top" src="../images/inveMat.png" alt="Card image cap" />
+            <div class="card-body">
+              <p class="card-text">
+                Inverzná matica.
+              </p>
+            </div>
           </div>
-        </div>
-        <div class="card" style="width: 13rem; height: 17rem;">
-          <img class="card-img-top" src="../images/deterRozvoj.png" alt="Card image cap" />
-          <div class="card-body">
-            <p class="card-text">
-              Determinant.
-            </p>
+        </a>
+        <a href="/linearnaAlgebra/témy/detStvMatice/index.html?tab=practice-problems">
+          <div class="card" style="width: 13rem; height: 17rem;">
+            <img class="card-img-top" src="../images/deterRozvoj.png" alt="Card image cap" />
+            <div class="card-body">
+              <p class="card-text">
+                Determinant matice.
+              </p>
+            </div>
           </div>
-        </div>
-        <div class="card" style="width: 13rem; height: 17rem;">
-          <img class="card-img-top" src="../images/derivFn.png" alt="Card image cap" />
-          <div class="card-body">
-            <p class="card-text">
-              Derivácia funkcie.
-            </p>
+        </a>
+        <a href="/funkcie/index.html#scrollspyHeading3">
+          <div class="card" style="width: 13rem; height: 17rem;">
+            <img class="card-img-top" src="../images/derivFn.png" alt="Card image cap" />
+            <div class="card-body">
+              <p class="card-text">
+                Derivácia funkcie.
+              </p>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
       <p style="text-align: center;">a dalšie ...</p>
 
@@ -146,8 +154,11 @@
       <section style="text-align: center;">
         <p>Taktiež tu nájdete vyzualizačný nástroj na vykreslovanie grafu funkcie, dotyčnice v danom bode a zobrazenie
           rovnice normály funkcie.</p>
-        <img src="../images/garfFn.png" alt="vizualizačný nástroj na vykreslovanie grafu funkcie"
-          style="max-width: 100%; height: auto;">
+        <div>
+          <a href="../funkcie/index.html#scrollspyHeading4">
+            <img src="../images/garfFn.png" alt="vizualizačný nástroj na vykreslovanie grafu funkcie"
+              style="max-width: 60rem; height: auto;">
+          </a>
       </section>
       <br>
       <hr id="line" />
