--- a/linearnaAlgebra/témy/algebrOperacieMatice/index.html
+++ b/linearnaAlgebra/témy/algebrOperacieMatice/index.html
@@ -30,6 +30,7 @@
       $('#myTab').load('../../../components/tab_links.html');
 
    });
+
 </script>
 
 <body>
@@ -343,6 +344,8 @@
          <script src="creatMatr.js"></script>
          <script src="multipl_matrix.js"></script>
          <script src="../../../sizeAdjust.js"></script>
+         <script src="../../tabLinksScript.js" defer></script>
+
       </div>
    </div>
 </body>
