--- a/linearnaAlgebra/témy/detStvMatice/index.html
+++ b/linearnaAlgebra/témy/detStvMatice/index.html
@@ -303,6 +303,7 @@
                </div>
          </main>
          <script src="../../../sizeAdjust.js"></script>
+         <script src="../../tabLinksScript.js" defer></script>
       </div>
    </div>
 
