--- a/linearnaAlgebra/témy/invMaticaVypocet/index.html
+++ b/linearnaAlgebra/témy/invMaticaVypocet/index.html
@@ -247,6 +247,7 @@
             </div>
          </main>
          <script src="../../../sizeAdjust.js"></script>
+         <script src="../../tabLinksScript.js" defer></script>
       </div>
    </div>
 </body>
