fixed night mode landing page bg dm ->lm

--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -157,7 +157,7 @@
         <div>
           <a href="../funkcie/index.html#scrollspyHeading4">
             <img src="../images/garfFn.png" alt="vizualizačný nástroj na vykreslovanie grafu funkcie"
-              style="max-width: 60rem; height: auto;">
+              style="max-width: 100%; height: auto;">
           </a>
       </section>
       <br>
