added test login -  register

--- a/funkcie/index.html
+++ b/funkcie/index.html
@@ -85,7 +85,7 @@
                     reálnemu číslu
                     x z množiny $$M \subset R$$ priradíme práve jedno reálne číslo $$y = f(x)$$. </p>
                 <br>
-                <p style="text-align: center;">$$f : M \rightarrow R, x \rightarrow = f (x)$$</p>
+                <p style="text-align: center;">$$f : M \rightarrow R, x \rightarrow f (x)$$</p>
                 <br>
                 <p>Číslo $$x \in M$$ je nezávislá premenná - argument funkcie,
                     číslo $$y \in M$$ je závislá premenná - hodnota funkcie.
