--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -46,7 +46,7 @@
               <a class="nav-link" aria-current="page" href="../linearnaAlgebra/index.html">Lineárna algebra</a>
             </li>
             <li class="nav-item mx-auto">
-              <a class="nav-link" aria-current="page" href="../funkcie/index.html">Funkcie 1 reálnej premennej</a>
+              <a class="nav-link" aria-current="page" href="../funkcie/index.html">Funkcie jednej reálnej premennej</a>
             </li>
             <li class="nav-item nav-night mx-auto">
               <div class=" nav-link" id="nightMode">
