added redirect when logged in and tab link landPg

--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -48,6 +48,9 @@
             <li class="nav-item mx-auto">
               <a class="nav-link" aria-current="page" href="../funkcie/index.html">Funkcie jednej reálnej premennej</a>
             </li>
+            <li class="nav-item mx-auto">
+              <a class="nav-link" aria-current="page" href="../test/index.php">Otestuj sa!</a>
+            </li>
             <li class="nav-item nav-night mx-auto">
               <div class=" nav-link" id="nightMode">
                 <div class="form-check form-switch " style="width: 9rem; margin: 0">
