--- a/linearnaAlgebra/index.html
+++ b/linearnaAlgebra/index.html
@@ -44,7 +44,7 @@
                <ul class="navbar-nav">
                   <li class="nav-item">
                      <a class="nav-link home" style=" color: white; background-color: #504e4e; border-radius: 4px;"
-                        href=" ../../landingPage/index.html">
+                        href="../landingPage/index.html">
                         <svg style=" margin-right: 2px; margin-bottom: 4px;" xmlns="http://www.w3.org/2000/svg"
                            width="16" height="16" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
                            <path
