chnaged some styles

--- a/linearnaAlgebra/index.html
+++ b/linearnaAlgebra/index.html
@@ -25,7 +25,7 @@
 
 <body>
    <header>
-      <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(235, 235, 94);">
+      <nav class="navbar navbar-expand-lg fixed-top navbar-light" style="background-color: rgb(235, 235, 94);">
          <div class="container-fluid">
             <a class="navbar-brand pad" style="padding: 0.5rem 0;" href="#">
                <svg style="margin: 6px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
