--- a/funkcie/index.html
+++ b/funkcie/index.html
@@ -89,7 +89,7 @@
                 <br>
                 <p>Číslo $$x \in M$$ je nezávislá premenná - argument funkcie,
                     číslo $$y \in M$$ je závislá premenná - hodnota funkcie.
-                    Množina $$M = D(f)$$ sa nazýva oblasť definičný obor funkcie,
+                    Množina $$M = D(f)$$ sa nazýva definičný obor funkcie,
                     funkcia je definovaná na množine $$M$$.
                     Množina všetkých hodnôt funkcie je obor hodnôt $$H(f)$$.
                 </p>
