--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -167,11 +167,11 @@
       <hr id="line" />
       <img src="../images/info.svg" alt="info" style="float: left" />
       <p id="intro">
-        Na tejto stráke nájdeš študijne materiály, riešené príklady a príklady
+        Na tejto stráke nájdeš študijné materiály, riešené príklady a príklady
         na počítanie z vybraných tém lineárnej algebry a funkcií jednej
-        reálnej premennej. K niektorým témam sú k dispozícií taktiež
+        reálnej premennej. K niektorým témam sú k dispozícii taktiež
         kalkulačky, ktoré ti pomôžu či už pri kontrole výsledku, alebo pre
-        správne navedenie k riešeniu. Pre tému funkcií je k dispozícií
+        správne navedenie k riešeniu. Pre tému funkcií je k dispozícii
         vizualizačný nástroj, pomocou ktorého si môžete vykresliť akúkoľvek
         funkciu.
       </p>
