--- a/linearnaAlgebra/témy/detStvMatice/index.html
+++ b/linearnaAlgebra/témy/detStvMatice/index.html
@@ -83,8 +83,9 @@
                      <p>Analogicky, ak $$j$$ je ľubovoľný stĺpcový index, tak platí:</p>
                      <br>
                      <div style="text-align: center; overflow-x: auto;">
-                        <p style="text-align: center;">$$|{\bf A}|=(-1)^{1+j}a_{1j}|{\bf A}{1j}| + (-1)^{2+j}a{2j}|{\bf
-                           A}{2j}| + \ldots + (-1)^{n+j}a{nj}|{\bf A}_{nj}| \ .$$</p>
+                        <p style="text-align: center;">$$|{\bf A}|=(-1)^{1+j}a_{1j}|{\bf A}_{1j}| +
+                           (-1)^{2+j}a_{2j}|{\bf
+                           A}_{2j}| + \ldots + (-1)^{n+j}a_{nj}|{\bf A}_{nj}| \ .$$</p>
                      </div>
                      <br>
                      <p>Uvedené vzt'ahy nazývame aj rozvojom determinantu podl'a $$i$$-teho riadku, resp. $$j$$-teho
