--- a/linearnaAlgebra/témy/gaussovTvarMatice/index.html
+++ b/linearnaAlgebra/témy/gaussovTvarMatice/index.html
@@ -93,7 +93,7 @@
           upravit' tak, aby spĺňala podmienky G1-G4.
           </p>
           <br>
-          <p><strong>Príklad: </strong> nasledujúcich štyroch matíc prvé dve nie sú v Gaussovom tvare (prečo?).
+          <p><strong>Príklad: </strong> Z nasledujúcich štyroch matíc prvé dve nie sú v Gaussovom tvare (prečo?).
             Tretia je v Gaussovom tvare
             (ale nie v redukovanom), zatial' čo posledná je v redukovanom Gaussovom tvare.</p>
           <div
