--- a/linearnaAlgebra/témy/sustavyLinearnychRovnic/index.html
+++ b/linearnaAlgebra/témy/sustavyLinearnychRovnic/index.html
@@ -94,11 +94,11 @@
                     <br><br>
                     <p>nazývame<span class="text-primary"> sústava $$m$$ lineárnych algebraických rovníc o $$n$$
                             neznámych</span> (SLAR). Čísla
-                        $$a_{11}, a_{12}, . . . , a_{mn}$$ nazývame koeficienty sústavy; $$x1, x2, . . . , xn$$ sú
+                        $$a_{11}, a_{12}, . . . , a_{mn}$$ nazývame koeficienty sústavy; $$x_{1}, x_2, . . . , x_n$$ sú
                         neznáme a
                         $$b_{1}, b_{2}, . .
                         . ,
-                        b_{m}$$ sú absolútne členy (pravá strana). Maticu (tabuľku), utvorenú z koeficientov :</p>
+                        b_{m}$$ sú absolútne členy (pravá strana). Maticu zostavenú z koeficientov :</p>
                     <br>
                     <div class="mathjax_matrix">$$A = \begin{pmatrix}
                         a_{11} & a_{12} & \cdots & a_{1n} \\
@@ -107,8 +107,8 @@
                         a_{m1} & a_{m2} & \cdots & a_{mn}
                         \end{pmatrix}$$</div>
                     <br><br>
-                    <p>nazývame <span class="text-primary">maticou sústavy</span> . Ak k nej pridáme stĺpec,
-                        utvorený z
+                    <p>nazývame <span class="text-primary">maticou sústavy</span>. Ak k nej pridáme stĺpec,
+                        vytvorený z
                         pravej strany, dostaneme
                         maticu</p>
                     <br>
